test/integration/bad/includes/if.stan
generated quantities {
   int x;
   if(1)
    x = 3;
  #include else.inc
}
